snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
52c0ee5d509b691534181461bfaac6dbfdac619b610603796fa13080036192fe